--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,3 +28,13 @@
     font-size: 1.5em;   
     border: 1px solid black;   
 }
+
+.opponent-stat-item {
+    font-size: 1.5em;   
+    border: 1px solid black;   
+    display: none;
+}
+
+.hidden {
+    display: none;
+}
