--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,40 +1,124 @@
-.card-image {
-    height: 100%;
-    width: 100%;
+.card .card-image {
+    height: auto;
+    width: 80%;
+    display: block;
+    margin: 0 auto;
 }
+
 .card {
     position: relative;   
+    margin-bottom: 1em;
+    border: none;
+    padding: 1em;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
+
 .card-name {
     position: absolute;
-    top: 50%;
-    left: 30%;
-    padding-top: 0.25em;
+    top: 7%;
+    left: 50%;
     transform: translateX(-50%);
-    font-size: 2em;
+    font-size: 1em;
+    font-weight: bold;
     text-align: center;
     color: black;
 }
+
+#player_card {
+    margin: 0;
+    padding-top: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+#opponent_card {
+    margin: 0;
+    padding-top: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
 .card-stats {
     position: absolute;
     list-style-type: none;
-    top: 60%;
+    top: 50%;
     left: 50%;
     transform: translateX(-50%);
-    width: 84%;
+    width: 50%;
+    max-height: min-content;
     color: black;
-}
-.stat-item {
-    font-size: 1.5em;   
-    border: 1px solid black;   
+    padding: 0;
 }
 
-.opponent-stat-item {
-    font-size: 1.5em;   
+.stat-item {
+    font-size: 1em;   
     border: 1px solid black;   
-    display: none;
+    background: rgba(255, 255, 255, 0.8); /* semi-transparent background for readability */
+    border-radius: 0.25em;
+    display: flex;
+    justify-content: space-between;
+    padding: 0.25em;
+    margin-bottom: 0.5em;
+    width: 100%;
 }
 
 .hidden {
     display: none;
+}
+
+/* Adjustments for smaller screens */
+@media (max-width: 576px) {
+    img {
+        height: 50%!important;
+        width: auto!important;
+    }
+
+    .card-content {
+        flex-direction: row;
+        align-items: flex-start;
+    }
+
+    .card-image {
+        width: 50px;
+        height: 50px;
+        margin-right: 10px;
+    }
+
+    .card-name {
+        font-size: 0.9em;
+    }
+
+    .card-stats {
+        width: 60%;
+        left: 54%;
+        top: 52%;
+    }
+
+    .stat-item {
+        border: 1px solid black;   
+        background: rgba(255, 255, 255, 0.8); /* semi-transparent background for readability */
+        border-radius: 0.25em;
+
+        margin-bottom: 0.15em;
+        width: 100%;
+    }
+    
+
+    .stat-name {
+        width: 90%;
+        font-size: 0.9em;
+        padding: 0.1em;
+        margin-bottom: 0.05em;
+    }
+
+
+    .stat-value {
+        width: 10%;
+        font-size: 0.9em;
+        padding: 0.1em;
+        margin-bottom: 0.05em;
+    }
 }
