--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-.card .card-image {
+.card-image {
     height: auto;
     width: 80%;
     display: block;
@@ -56,7 +56,7 @@
 .stat-item {
     font-size: 1em;   
     border: 1px solid black;   
-    background: rgba(255, 255, 255, 0.8); /* semi-transparent background for readability */
+    background: rgba(255, 255, 255, 0.8);
     border-radius: 0.25em;
     display: flex;
     justify-content: space-between;
@@ -75,7 +75,7 @@
         height: 50%!important;
         width: auto!important;
     }
-    
+
     .card-image {
         width: 50px;
         height: 50px;
