--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
+/* Default styles for small screens */
 .card-image {
-    height: 90%;
-    width: 90%;
+    width: 40%;
+    height: auto;
     display: block;
     margin: 0 auto;
 }
@@ -18,113 +19,90 @@
 
 .card-name {
     position: absolute;
-    top: 7%;
+    top: 30%;
     left: 50%;
     transform: translateX(-50%);
-    font-size: 1em;
+    font-size: 0.9em;
     font-weight: bold;
     text-align: center;
     color: black;
 }
 
-#player_card {
+#player_card, #opponent_card {
+    width: 50%;
+    height: 300px;
     margin: 0;
-    padding-top: 5px;
-    padding-left: 10px;
-    padding-right: 10px;
-}
-
-#opponent_card {
-    margin: 0;
-    padding-top: 5px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding: 5px 10px 0 10px;
+    border: 1px solid black;
 }
 
 .card-stats {
     position: absolute;
     list-style-type: none;
-    top: 50%;
-    left: 50%;
+    top: 30%;
+    left: 54%;
     transform: translateX(-50%);
-    width: 50%;
-    max-height: min-content;
+    width: 60%;
+    height: 60%;
     color: black;
     padding: 0;
 }
 
 .stat-item {
-    font-size: 1em;   
+    font-size: 0.9em;   
     border: 1px solid black;   
     background: rgba(255, 255, 255, 0.8);
     border-radius: 0.25em;
     display: flex;
     justify-content: space-between;
     padding: 0.25em;
-    margin-bottom: 0.5em;
+    margin-bottom: 0.15em;
     width: 100%;
+}
+
+.stat-name, .stat-value {
+    font-size: 0.9em;
+    padding: 0.1em;
+    margin-bottom: 0.05em;
 }
 
 .hidden {
     display: none;
 }
 
-/* Adjustments for smaller screens */
-@media (max-width: 576px) {
-    
-    #player_card {
-        width: 50%;
-        height: 300px;
-        margin: 0;
-        border: 1px solid black ;
-    }
-    
-    #opponent_card {
-        width: 50%;
-        height: 300px;
-        margin: 0;
-        border: 1px solid black ;
-
-    }
-
+/* Adjustments for larger screens */
+@media (min-width: 768px) {
     .card-image {
-        width: 40%;
-        height: auto;
-
+        height: 90%;
+        width: 90%;
     }
 
     .card-name {
-        top: 30%;
-        font-size: 0.9em;
-    }px
+        top: 7%;
+        font-size: 1em;
+    }
+
+    #player_card, #opponent_card {
+        width: auto;
+        height: auto;
+        margin: 0;
+        border: none;
+        padding: 1em;
+    }
 
     .card-stats {
-        height: 60%;
-        width: 60%;
-        left: 54%;
-        top: 30%;
+        top: 50%;
+        left: 50%;
+        width: 50%;
+        height: auto;
     }
 
     .stat-item {
-        border: 1px solid black;   
-        background: rgba(255, 255, 255, 0.8); /* semi-transparent background for readability */
-        border-radius: 0.25em;
-
-        margin-bottom: 0.15em;
-        width: 100%;
-    }
-    
-    .stat-name {
-        width: 90%;
-        font-size: 0.9em;
-        padding: 0.1em;
-        margin-bottom: 0.05em;
+        font-size: 1em;   
+        margin-bottom: 0.5em;
     }
 
-    .stat-value {
-        width: 10%;
-        font-size: 0.9em;
-        padding: 0.1em;
-        margin-bottom: 0.05em;
+    .stat-name, .stat-value {
+        font-size: 1em;
     }
 }
