--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,31 +1,26 @@
 /* Default styles for small screens */
+.card {
+    border: 2px solid #000000;
+    padding: 10px;
+    width: 250px;
+    margin: 10px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: #889608;
+}
+
+.card-name {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
 .card-image {
     width: 40%;
     height: auto;
     display: block;
     margin: 0 auto;
-}
-
-.card {
-    position: relative;   
-    margin-bottom: 1em;
-    border: none;
-    padding: 1em;
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.card-name {
-    position: absolute;
-    top: 30%;
-    left: 50%;
-    transform: translateX(-50%);
-    font-size: 0.9em;
-    font-weight: bold;
-    text-align: center;
-    color: black;
 }
 
 #player_card, #opponent_card {
@@ -37,12 +32,18 @@
 }
 
 .card-stats {
-    top: 15%;
+    top: 5%;
     position: relative;
     list-style-type: none;
     color: black;
     padding: 0;
+    left: 1em;
     margin: 0;
+}
+
+.stat-wrapper {
+    align-items: center;
+    width: 50%;
 }
 
 .stat-item {
@@ -51,9 +52,7 @@
     background: rgba(255, 255, 255, 0.8);
     border-radius: 0.25em;
     display: flex;
-    justify-content: space-between;
-    padding: 0.25em;
-    margin-bottom: 0.15em;
+    margin-bottom: 1em;
     width: 100%;
 }
 
