--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,13 +21,15 @@
     height: auto;
     display: block;
     margin: 0 auto;
+    border: 2px solid black;
+    border-radius: 10%;
 }
 
 #player_card, #opponent_card {
-    width: 50%;
+    width: 48%;
     height: 300px;
     margin: 0;
-    padding: 5px 10px 0 10px;
+    padding: 5px 10px 5px 10px;
     border: 1px solid black;
 }
 
@@ -60,6 +62,7 @@
     font-size: 0.9em;
     padding: 0.1em;
     margin-bottom: 0.05em;
+    font-weight: bold;
 }
 
 .hidden {
