--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,11 @@
 /* Default styles for small screens */
+.trainers_image {
+    width: 100%;
+    height: auto;
+}
+
 .card {
+
     border: 2px solid #000000;
     padding: 10px;
     width: 250px;
@@ -17,7 +23,7 @@
 }
 
 .card-image {
-    width: 40%;
+    width: 30%;
     height: auto;
     display: block;
     margin: 0 auto;
@@ -26,7 +32,7 @@
 }
 
 #player_card, #opponent_card {
-    width: 48%;
+    width: 50%;
     height: 300px;
     margin: 0;
     padding: 5px 10px 5px 10px;
@@ -58,6 +64,13 @@
     width: 100%;
 }
 
+.stat-name  {
+    font-size: 0.7em;
+    padding: 0.1em;
+    margin-bottom: 0.05em;
+    font-weight: bold;
+}
+
 .stat-name, .stat-value {
     font-size: 0.9em;
     padding: 0.1em;
@@ -75,6 +88,8 @@
     .card-image {
         height: 90%;
         width: 90%;
+        border: none;
+        border-radius: 0;
     }
 
     .card-name {
