--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,54 +4,64 @@
     height: auto;
 }
 
-.card {
+#card-area {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
 
-    border: 2px solid #000000;
-    padding: 10px;
-    width: 250px;
-    margin: 10px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    background-color: #889608;
+#player-card {
+    width: 50%;
+}
+
+#opponent-card {
+    width: 50%;
+}
+
+
+.card-container {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card {
+    width: 100%;
 }
 
 .card-name {
-    font-size: 24px;
+    position: absolute;
+    top: 7%;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 0.9em;
     font-weight: bold;
-    margin-bottom: 10px;
     text-align: center;
+    color: black;
+    z-index: 10;
 }
 
 .card-image {
-    width: 30%;
+    width: 100%;
     height: auto;
-    display: block;
-    margin: 0 auto;
-    border: 2px solid black;
-    border-radius: 10%;
-}
-
-#player_card, #opponent_card {
-    width: 50%;
-    height: 300px;
-    margin: 0;
-    padding: 5px 10px 5px 10px;
     border: 1px solid black;
+    border-radius: 5%;
 }
 
 .card-stats {
-    top: 5%;
-    position: relative;
+    width: 90%;
+    position: absolute;
+    bottom: 10px;
+    left: 60%;
+    transform: translateX(-50%);
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 5px;
     list-style-type: none;
     color: black;
-    padding: 0;
-    left: 1em;
+    z-index: 10;
     margin: 0;
-}
-
-.stat-wrapper {
-    align-items: center;
-    width: 50%;
 }
 
 .stat-item {
@@ -60,22 +70,15 @@
     background: rgba(255, 255, 255, 0.8);
     border-radius: 0.25em;
     display: flex;
-    margin-bottom: 1em;
-    width: 100%;
+    justify-content: space-between;
 }
 
-.stat-name  {
+.stat-name {
+font-size: 0.5em;
+}
+
+.stat-value {
     font-size: 0.7em;
-    padding: 0.1em;
-    margin-bottom: 0.05em;
-    font-weight: bold;
-}
-
-.stat-name, .stat-value {
-    font-size: 0.9em;
-    padding: 0.1em;
-    margin-bottom: 0.05em;
-    font-weight: bold;
 }
 
 .hidden {
@@ -84,49 +87,27 @@
 
 /* Adjustments for larger screens */
 @media (min-width: 576px) {
+    .card-container {
+        width: 48%;
+        height: auto;
+    }
 
-    .card-image {
-        height: 90%;
-        width: 90%;
-        border: none;
-        border-radius: 0;
+    .card {
+        width: 100%;
     }
 
     .card-name {
-        top: 7%;
-        font-size: 1em;
-    }
-
-    #player_card, #opponent_card {
-        width: auto;
-        height: auto;
-        margin: 0;
-        border: none;
-        padding: 1em;
+        font-size: 1.2em;
     }
 
     .card-stats {
-        position: absolute;
-        list-style-type: none;
-        top: 30%;
-        left: 54%;
-        transform: translateX(-50%);
-        width: 60%;
-        height: 60%;
-        color: black;
-        padding: 0;
+        grid-template-columns: 1fr;
+        bottom: 20px;
+        width: 70%;
     }
 
     .stat-item {
-        font-size: 0.9em;   
-        border: 1px solid black;   
-        background: rgba(255, 255, 255, 0.8);
-        border-radius: 0.25em;
-        display: flex;
-        justify-content: space-between;
-        padding: 0.25em;
-        margin-bottom: 0.15em;
-        width: 100%;
+        font-size: 1em;
     }
 
     .stat-name, .stat-value {
