--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,14 +80,14 @@ body {
     border-radius: 0.25em;
     display: flex;
     justify-content: space-between;
+    justify-content: center;
+    align-items: center; 
+    text-align: center;
 }
 
-.stat-name {
-font-size: 0.8em;
-}
-
-.stat-value {
+.stat-name, .stat-value {
     font-size: 0.8em;
+    padding: 0;
 }
 
 .hidden {
