--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,18 @@ body {
     height: 100vh;
 }
 
+.footer {
+    background-color: rgba(255, 255, 255, 0.9);
+    border-top: 2px solid #000;
+    padding: 1em;
+    font-size: 1.2em;
+    font-weight: bold;
+    text-align: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
 /* Default styles for smallest screens */
 .trainers_image {
     width: 100%;
@@ -105,6 +117,21 @@ body {
     width: 20%;
     padding: 1em;
     padding-left: 2em;
+}
+
+#message-area {
+    background-color: rgba(255, 255, 255, 0.9);
+    border: 2px solid #000;
+    border-radius: 10px;
+    padding: 1em;
+    font-size: 1.2em;
+    font-weight: bold;
+    text-align: center;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1000;
 }
 
 
