--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,7 +64,7 @@ body {
     height: auto;
     border: 1px solid black;
     border-radius: 5%;
-    filter: drop-shadow(black 1rem 1rem 10px);
+    /* filter: drop-shadow(black 1rem 1rem 10px); */
 }
 
 .card-stats {
@@ -105,7 +105,7 @@ body {
 
 #deck-size-area {
     background: rgba(255, 255, 255, 0.8);
-    filter: drop-shadow(black 1rem 1rem 10px);
+    /* filter: drop-shadow(black 1rem 1rem 10px); */
     width: 100%;
     border: 2px solid #000;
     border-radius: 10px;
@@ -126,7 +126,7 @@ body {
 
 #message-area {
     background: rgba(255, 255, 255, 0.8);
-    filter: drop-shadow(black 1rem 1rem 10px);
+    /* filter: drop-shadow(black 1rem 1rem 10px); */
     width: 80%;
     border: 2px solid #000;
     border-radius: 10px;
