--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,23 +64,16 @@ body {
     height: auto;
     border: 1px solid black;
     border-radius: 5%;
-    /* filter: drop-shadow(black 1rem 1rem 10px); */
+    filter: drop-shadow(black 1rem 1rem 10px);
 }
 
 .card-stats {
     position: absolute;
-    width: 90%;
-    top: 7em;
-    bottom: 10px;
-    left: 62%;
-    transform: translateX(-50%);
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 5px;
-    list-style-type: none;
-    color: black;
-    z-index: 10;
-    margin: 0;
+    width: 90%;
+    bottom: 5px;
+    left: 1.8em;
 }
 
 .stat-item {
@@ -105,7 +98,7 @@ body {
 
 #deck-size-area {
     background: rgba(255, 255, 255, 0.8);
-    /* filter: drop-shadow(black 1rem 1rem 10px); */
+    filter: drop-shadow(black 1rem 1rem 10px);
     width: 100%;
     border: 2px solid #000;
     border-radius: 10px;
@@ -125,17 +118,17 @@ body {
 }
 
 #message-area {
+    position: absolute;
     background: rgba(255, 255, 255, 0.8);
-    /* filter: drop-shadow(black 1rem 1rem 10px); */
+    filter: drop-shadow(black 1rem 1rem 10px);
+    top: 110%;
+    left: 10%;
     width: 80%;
     border: 2px solid #000;
     border-radius: 10px;
     font-weight: bold;
     text-align: center;
-    position: fixed;
-    top: 60%;
-    left: 50%;
-    transform: translateX(-50%);
+    padding: 0.5em;
 }
 
 
