--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,23 +1,44 @@
 /* Global CSS */
 
+.header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 body {
     background-image: linear-gradient(rgb(17, 29, 141), white);
     height: 100vh;
+    margin: 0;
 }
 
 .footer {
-    background-color: rgba(255, 255, 255, 0.9);
-    border-top: 2px solid #000;
-    padding: 1em;
+    position: relative;
     font-size: 1.2em;
     font-weight: bold;
     text-align: center;
-    position: fixed;
-    bottom: 0;
     width: 100%;
 }
 
 /* Default styles for smallest screens */
+
+/* Index page CSS */
+.instructions {
+    position: absolute;
+    background: rgba(255, 255, 255, 0.8);
+    filter: drop-shadow(black 1rem 1rem 10px);
+    left: 10%;
+    top: 34%;
+    width: 80%;
+    border: 2px solid #000;
+    border-radius: 10px;
+    font-weight: bold;
+    padding: 0.25em;
+}
+
+/* 404 Page */
+
+/* Game page CSS */
 .trainers_image {
     width: 100%;
     height: auto;
@@ -85,6 +106,17 @@ body {
     justify-content: center;
     align-items: center;
     text-align: center;
+    transition: background-color 0.3s, color 0.3s; /* Add transition for smooth color change */
+}
+
+.stat-item:hover {
+    background-color: rgba(0, 123, 255, 0.8); /* Change background color on hover */
+    color: white; /* Change text color on hover */
+}
+
+.stat-item:active {
+    background-color: rgba(0, 86, 179, 0.8); /* Change background color on click */
+    color: white; /* Ensure text color remains white when clicked */
 }
 
 .stat-name, .stat-value {
@@ -131,7 +163,6 @@ body {
     padding: 0.5em;
 }
 
-
 /* Adjustments for larger screens */
 @media (min-width: 375px) {
     .card-stats {
@@ -141,7 +172,7 @@ body {
 
 @media (min-width: 576px) {
     #player-card, #opponent-card {
-        width: 48%; 
+        width: 48%;
     }
     .card-container {
         width: 100%;
