--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -219,12 +219,14 @@ button:active {
 .player-deck-text, .opponent-deck-text {
     width: 30%;
     padding: 1em;
+    font-weight: bold;
 }
 
 .player-deck-num, .opponent-deck-num {
     width: 20%;
-    padding: 1em;
-    padding-left: 2em;
+    padding-top: 1em ;
+    font-size: 1.5em;
+    font-weight: bold;
 }
 
 #message-area {
