--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,9 @@ button:active {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 100%;
 }
 
 .main-content {
@@ -219,14 +222,12 @@ button:active {
 .player-deck-text, .opponent-deck-text {
     width: 30%;
     padding: 1em;
-    font-weight: bold;
 }
 
 .player-deck-num, .opponent-deck-num {
     width: 20%;
-    padding-top: 1em ;
-    font-size: 1.5em;
-    font-weight: bold;
+    padding: 1em;
+    padding-left: 2em;
 }
 
 #message-area {
