changed JS to wrap logo in an A tag to turn into a link to go back to homepage

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -226,7 +226,7 @@ button:active {
 }
 
 .opponent-deck-text {
-    padding-left: %;
+    padding-left: 5%;
 }
 
 .player-deck-num, .opponent-deck-num {
