amended 404 page CSS and HTML to keep inline with the rest of the site

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,6 +115,10 @@ button:active {
 
 /* 404 Page */
 
+.lost-img {
+    width: 100%;
+    height: auto;
+}
 /* Game page CSS */
 .trainers_image {
     width: 100%;
