--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,13 +25,13 @@ body {
 
 button {
     background-color: rgba(255, 255, 255, 0.8);
-    border: 1 solid black;
+    border: 2 solid black;
     color: black;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     margin: 4px 2px;
-    cursor: pointer;
+    cursor: finger;
     border-radius: 16px;
 }
 
