--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -251,6 +251,11 @@ button:active {
     text-align: center;
     padding: 0.5em;
     margin: 1em 0;
+    height: 155px;
+    display: flex; 
+    flex-direction: column;
+    justify-content: center; 
+    align-items: center; 
 }
 
 #stat-message {
