added disableStatItems function to prevent the player from spamming the stat buttons during their/opponent turns

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,10 @@ html, body {
     overflow: auto; 
 }
 
+.disabled {
+    pointer-events: none;
+  }
+
 body {
     position: relative;
     background: none; 
