tweaked CSS file to improve responsiveness

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -305,7 +305,29 @@ button:active {
     }
 }
 
-@media (min-width: 540px) {
+@media (min-width: 430px) {
+
+    .card-stats {
+        top: 9.5em;
+    }
+}
+
+@media (min-width: 430px) {
+
+    .card-stats {
+        top: 10em;
+    }
+}
+
+@media (min-width: 500px) {
+
+    .card-stats {
+        top: 11em;
+    }
+}
+
+
+@media (min-width: 539px) {
     #player-card, #opponent-card {
         width: 48%;
     }
@@ -346,6 +368,13 @@ button:active {
     }
 }
 
+@media (min-width: 560px) {
+
+    .card-stats {
+        top: 10em;
+    }
+}
+
 @media (min-width: 768px) {
     .instructions {
         font-size: 1em;
@@ -373,10 +402,10 @@ button:active {
     }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 990px) {
     .card-name {
-        font-size: 1em;
-        top: 1.5em;
+        font-size: 1.5em;
+        top: 1em;
     }
     .card-stats {
         top: 18em;
@@ -400,10 +429,29 @@ button:active {
     }
 }
 
+@media (min-width: 1200px) {
+    .card-name {
+        font-size: 2em;
+        top: 0.75em;
+    }
+    .card-stats {
+        top: 22em;
+        grid-template-columns: 1fr;
+        bottom: 15px;
+        width: 90%;
+    }
+    .stat-name, .stat-value {
+        font-size: 1em;
+        width: 50%;
+        padding: 0.5em;
+    }
+}
+  
+
 @media (min-width: 1280px) {
     .card-name {
-        font-size: 1em;
-        top: 2em;
+        font-size: 2em;
+        top: 0.75em;
     }
     .card-stats {
         top: 22em;
@@ -420,8 +468,8 @@ button:active {
 
 @media (min-width: 1400px) {
     .card-name {
-        font-size: 1em;
-        top: 2.5em;
+        font-size: 2em;
+        top: 1em;
     }
     .card-stats {
         top: 25em;
