added tab index functionality to the card items so they can be used via keyboard input

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,10 @@ button:active {
     background-color: rgba(255, 255, 255, 0.8);
 }
 
+.stat-item-focus {
+  outline: 2px solid #00f; /* Adjust the color and style as needed */
+}
+
 .logo-link {
     width: 320px;
 }
