refactored HTML to remove bootstrap and move to more custom CSS generated layout, since this was causing varying issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,30 +1,36 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
-
 /* Global CSS */
 html, body {
     height: 100%;
     margin: 0;
-    overflow: auto; 
+    overflow: auto;
+    background-image: linear-gradient(#111d8d, white);
+
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+}
+
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.container {
+    flex: 1;
 }
 
 .disabled {
     pointer-events: none;
-  }
+}
 
 body {
     position: relative;
     background: none; 
-}
-
-.background {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: linear-gradient(#111d8d, white);
-    z-index: -1; 
 }
 
 button {
@@ -50,10 +56,6 @@ button:active {
   outline: 2px solid #00f; /* Adjust the color and style as needed */
 }
 
-.logo-link {
-    width: 320px;
-}
-
 .header {
     display: flex;
     justify-content: center;
@@ -68,11 +70,12 @@ button:active {
 }
 
 .main-content {
-    flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
+    flex-grow: 1;
 }
 
 .footer {
@@ -101,16 +104,22 @@ button:active {
 }
 
 /* Index page CSS */
+.hero-image {
+    width: 95%;
+    max-width: 770px;
+}
+
 .instructions {
     font-family: "Montserrat", sans-serif;
     background: rgba(255, 255, 255, 0.8);
     font-size: 0.75em;
-    width: 90%;
+    width: 99%;
     border: 2px solid #000;
     border-radius: 10px;
     font-weight: bold;
     padding: 0.25em;
     margin: 1em 0;
+    width: 95%;
 }
 
 .name-request {
@@ -131,12 +140,26 @@ button:active {
     margin-bottom: 10px;
 }
 
+.name-form input {
+    padding: 5px;
+    margin-right: 10px;
+}
+
+.name-form button {
+    padding: 5px 10px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
 /* 404 Page */
 
 .lost-img {
     width: 100%;
     height: auto;
 }
+
 /* Game page CSS */
 .trainers_image {
     width: 100%;
@@ -312,26 +335,22 @@ button:active {
 }
 
 @media (min-width: 430px) {
-
     .card-stats {
         top: 9.5em;
     }
 }
 
-@media (min-width: 430px) {
-
+@media (min-width: 460px) {
     .card-stats {
         top: 10em;
     }
 }
 
 @media (min-width: 500px) {
-
     .card-stats {
         top: 11em;
     }
 }
-
 
 @media (min-width: 539px) {
     #player-card, #opponent-card {
@@ -375,7 +394,6 @@ button:active {
 }
 
 @media (min-width: 560px) {
-
     .card-stats {
         top: 10em;
     }
@@ -452,7 +470,6 @@ button:active {
         padding: 0.5em;
     }
 }
-  
 
 @media (min-width: 1280px) {
     .card-name {
