--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,18 +6,18 @@ html, body {
     margin: 0;
     overflow: auto;
     background-image: linear-gradient(#111d8d, white);
-
 }
 
 body {
     display: flex;
     flex-direction: column;
+    min-height: 100vh;
 }
 
 .wrapper {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    flex-grow: 1;
 }
 
 .container {
