--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -166,7 +166,7 @@ button:active {
 }
 
 /* Game page CSS */
-.trainers_image {
+.trainers-image {
     width: 100%;
     height: auto;
 }
@@ -295,9 +295,9 @@ button:active {
     border-radius: 10px;
     font-weight: bold;
     text-align: center;
-    padding: 0.5em;
+    padding: 0.25em;
     margin: 1em 0;
-    height: 155px;
+    height: 200px;
     display: flex; 
     flex-direction: column;
     justify-content: center; 
