--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,18 +88,28 @@ button:active {
 }
 
 .footer-links {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+    padding: 0;
+    margin: 0;
     font-size: 1.5em;
+}
+
+.footer-links li {
+    margin: 0 15px;
 }
 
 .footer-links .fa-logo {
     color: rgb(0, 87, 179);
 }
 
-.fa-logo:hover {
+.footer-links .fa-logo:hover {
     color: rgba(0, 123, 255, 0.8);
 }
 
-.fa-logo:active {
+.footer-links .fa-logo:active {
     color: rgb(0, 58, 120);
 }
 
