added an extra button to the endOfGame function to let the player return to the index page. Also added story point justifications to the readme

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -320,6 +320,9 @@ button:active {
     margin-top: 0.5em;
 }
 
+button:focus {
+    outline: 2px solid #00f; /* Or any other visible color */
+  }
 /* Adjustments for larger screens */
 
 @media (min-width: 375px) {
